force-app/main/default/objects/Campaign/fields/Ano__c.field-meta.xml
<CustomField>
    <fullName>Ano__c</fullName>
    <formula>YEAR(StartDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ano</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>