force-app/main/default/objects/Campaign/fields/Aprova_o_Diretoria_Comercial__c.field-meta.xml
<CustomField>
    <fullName>Aprova_o_Diretoria_Comercial__c</fullName>
    <formula>IF(Meta_de_Vendas__c  == null || Meta_de_Vendas__c  == 0, false, Meta_de_Vendas__c  &lt;=  (Custo_estimado_de_conta_de_participa_o__c * 1/10))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aprovação Diretoria Comercial</label>
    <type>Checkbox</type>
</CustomField>