force-app/main/default/objects/Campaign/fields/Aprovado_Educacao__c.field-meta.xml
<CustomField>
    <fullName>Aprovado_Educacao__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aprovado_Educacao</label>
    <type>Checkbox</type>
</CustomField>