force-app/main/default/objects/Campaign/fields/Aprovado_mtk__c.field-meta.xml
<CustomField>
    <fullName>Aprovado_mtk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aprovado_mtk</label>
    <type>Checkbox</type>
</CustomField>