force-app/main/default/objects/Campaign/fields/Ata_N__c.field-meta.xml
<CustomField>
    <fullName>Ata_N__c</fullName>
    <displayFormat>ATR {0000}</displayFormat>
    <label>Ata Nº</label>
    <type>AutoNumber</type>
</CustomField>