force-app/main/default/objects/Campaign/fields/Carga_horaria__c.field-meta.xml
<CustomField>
    <fullName>Carga_horaria__c</fullName>
    <label>Carga horária</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>