force-app/main/default/objects/Campaign/fields/Cidade__c.field-meta.xml
<CustomField>
    <fullName>Cidade__c</fullName>
    <label>Cidade</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Estado__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aracaju</fullName>
            </value>
            <value>
                <fullName>Belém</fullName>
            </value>
            <value>
                <fullName>Belo Horizonte</fullName>
            </value>
            <value>
                <fullName>Boa Vista</fullName>
            </value>
            <value>
                <fullName>Brasília</fullName>
            </value>
            <value>
                <fullName>Campo Grande</fullName>
            </value>
            <value>
                <fullName>Cuiabá</fullName>
            </value>
            <value>
                <fullName>Curitiba</fullName>
            </value>
            <value>
                <fullName>Dourados</fullName>
            </value>
            <value>
                <fullName>Florianópolis</fullName>
            </value>
            <value>
                <fullName>Fortaleza</fullName>
            </value>
            <value>
                <fullName>Foz do Iguaçu</fullName>
            </value>
            <value>
                <fullName>Goiânia</fullName>
            </value>
            <value>
                <fullName>João Pessoa</fullName>
            </value>
            <value>
                <fullName>Macapá</fullName>
            </value>
            <value>
                <fullName>Maceió</fullName>
            </value>
            <value>
                <fullName>Manaus</fullName>
            </value>
            <value>
                <fullName>Natal</fullName>
            </value>
            <value>
                <fullName>Outra</fullName>
            </value>
            <value>
                <fullName>Palmas</fullName>
            </value>
            <value>
                <fullName>Porto Alegre</fullName>
            </value>
            <value>
                <fullName>Porto Velho</fullName>
            </value>
            <value>
                <fullName>Recife</fullName>
            </value>
            <value>
                <fullName>Rio Branco</fullName>
            </value>
            <value>
                <fullName>Rio de Janeiro</fullName>
            </value>
            <value>
                <fullName>Salvador</fullName>
            </value>
            <value>
                <fullName>São Luís</fullName>
            </value>
            <value>
                <fullName>São Paulo</fullName>
            </value>
            <value>
                <fullName>Teresina</fullName>
            </value>
            <value>
                <fullName>Vitória</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>