force-app/main/default/objects/Campaign/fields/Contagem_Eventos_de_Treinamento__c.field-meta.xml
<CustomField>
    <fullName>Contagem_Eventos_de_Treinamento__c</fullName>
    <label>RTC</label>
    <length>20</length>
    <type>Text</type>
</CustomField>