force-app/main/default/objects/Campaign/fields/Custo_estimado_de_conta_de_participa_o__c.field-meta.xml
<CustomField>
    <fullName>Custo_estimado_de_conta_de_participa_o__c</fullName>
    <label>Custo estimado do evento</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>