force-app/main/default/objects/Campaign/fields/Data_de_in_cio2__c.field-meta.xml
<CustomField>
    <fullName>Data_de_in_cio2__c</fullName>
    <formula>IF(!ISNULL(StartDate),StartDate,DATEVALUE(Inicio__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data de início*</label>
    <type>Date</type>
</CustomField>