force-app/main/default/objects/Campaign/fields/descricaoCurta__c.field-meta.xml
<CustomField>
    <fullName>descricaoCurta__c</fullName>
    <label>Breve Descrição do Evento</label>
    <length>200</length>
    <type>Text</type>
</CustomField>