force-app/main/default/objects/Campaign/fields/Dispon_vel_no_Site__c.field-meta.xml
<CustomField>
    <fullName>Dispon_vel_no_Site__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Se marcado, o evento será publico no site</description>
    <label>Disponível no Site</label>
    <type>Checkbox</type>
</CustomField>