force-app/main/default/objects/Campaign/fields/ENdere_o_check__c.field-meta.xml
<CustomField>
    <fullName>ENdere_o_check__c</fullName>
    <formula>!ISBLANK( Endereco__City__s )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Endereço_check</label>
    <type>Checkbox</type>
</CustomField>