force-app/main/default/objects/Campaign/fields/Forecast_moeda__c.field-meta.xml
<CustomField>
    <fullName>Forecast_moeda__c</fullName>
    <inlineHelpText>Valor previsto</inlineHelpText>
    <label>Forecast</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>