force-app/main/default/objects/Campaign/fields/GARANTIDO__c.field-meta.xml
<CustomField>
    <fullName>GARANTIDO__c</fullName>
    <label>GARANTIDO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>