force-app/main/default/objects/Campaign/fields/Instrutor__c.field-meta.xml
<CustomField>
    <fullName>Instrutor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Instrutor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Campanhas</relationshipLabel>
    <relationshipName>Campanhas</relationshipName>
    <type>Lookup</type>
</CustomField>