force-app/main/default/objects/Campaign/fields/Linha__c.field-meta.xml
<CustomField>
    <fullName>Linha__c</fullName>
    <label>Linha</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PMLS</fullName>
            </value>
            <value>
                <fullName>ULTRASSOM</fullName>
            </value>
            <value>
                <fullName>PM</fullName>
            </value>
            <value>
                <fullName>SURGICAL</fullName>
            </value>
            <value>
                <fullName>CMI</fullName>
            </value>
            <value>
                <fullName>OPME</fullName>
            </value>
            <value>
                <fullName>VETERINÁRIA</fullName>
            </value>
            <value>
                <fullName>CIRURGIA ROBÓTICA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>