force-app/main/default/objects/Campaign/fields/Link_de_inscricao__c.field-meta.xml
<CustomField>
    <fullName>Link_de_inscricao__c</fullName>
    <label>Link de inscrição</label>
    <type>TextArea</type>
</CustomField>