force-app/main/default/objects/Campaign/fields/Local_Empresa__c.field-meta.xml
<CustomField>
    <fullName>Local_Empresa__c</fullName>
    <label>Local (Empresa)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ABC GO</fullName>
            </value>
            <value>
                <fullName>ABC MT</fullName>
            </value>
            <value>
                <fullName>ABC TO</fullName>
            </value>
            <value>
                <fullName>GDB</fullName>
            </value>
            <value>
                <fullName>HEALTH</fullName>
            </value>
            <value>
                <fullName>HOSPCOM DF</fullName>
            </value>
            <value>
                <fullName>HOSPCOM GO</fullName>
            </value>
            <value>
                <fullName>HOSPCOM 153</fullName>
            </value>
            <value>
                <fullName>HOSPCOM MT</fullName>
            </value>
            <value>
                <fullName>HOSPCOM SP</fullName>
            </value>
            <value>
                <fullName>GESTCOM</fullName>
            </value>
            <value>
                <fullName>HOSPCOM MG</fullName>
            </value>
            <value>
                <fullName>HOSPCOM AM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>