force-app/main/default/objects/Campaign/fields/Meta_de_leads__c.field-meta.xml
<CustomField>
    <fullName>Meta_de_leads__c</fullName>
    <label>Meta de leads</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>