force-app/main/default/objects/Campaign/fields/Necessita_demonstacao__c.field-meta.xml
<CustomField>
    <fullName>Necessita_demonstacao__c</fullName>
    <label>Necessita demonstração</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>