force-app/main/default/objects/Campaign/fields/Sub_Linha__c.field-meta.xml
<CustomField>
    <fullName>Sub_Linha__c</fullName>
    <label>Especialidade</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ANESTESIA</fullName>
            </value>
            <value>
                <fullName>APOIO A MOBILIDADE</fullName>
            </value>
            <value>
                <fullName>CARDIOLOGIA</fullName>
            </value>
            <value>
                <fullName>CUIDADOS PESSOAIS</fullName>
            </value>
            <value>
                <fullName>ELETROCIRURGIA</fullName>
            </value>
            <value>
                <fullName>INFUSÃO</fullName>
            </value>
            <value>
                <fullName>LABORATORIAL</fullName>
            </value>
            <value>
                <fullName>MONITORIZAÇÃO</fullName>
            </value>
            <value>
                <fullName>NEONATOLOGIA</fullName>
            </value>
            <value>
                <fullName>OPME</fullName>
            </value>
            <value>
                <fullName>SURGICAL</fullName>
            </value>
            <value>
                <fullName>ULTRASSOM</fullName>
            </value>
            <value>
                <fullName>UROLOGIA</fullName>
            </value>
            <value>
                <fullName>VENTILAÇÃO</fullName>
            </value>
            <value>
                <fullName>VETERINÁRIA</fullName>
            </value>
            <value>
                <fullName>VIDEO LAPAROSCOPIA</fullName>
            </value>
            <value>
                <fullName>VETERINARIA IVD</fullName>
            </value>
            <value>
                <fullName>VETERINARIA PMLS</fullName>
            </value>
            <value>
                <fullName>VETERINARIA MIS</fullName>
            </value>
            <value>
                <fullName>VETERINARIA COLÔMBIA</fullName>
            </value>
            <value>
                <fullName>CIRURGIA</fullName>
                <isActive>false</isActive>
                <label>CIRURGIA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>