force-app/main/default/objects/Campaign/fields/Total_despesas__c.field-meta.xml
<CustomField>
    <fullName>Total_despesas__c</fullName>
    <label>Total despesas</label>
    <summarizedField>Despesa__c.Valor__c</summarizedField>
    <summaryForeignKey>Despesa__c.Evento__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>