force-app/main/default/objects/Campaign/fields/treinamento__c.field-meta.xml
<CustomField>
    <fullName>treinamento__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Esse evento é um treinamento interno?</inlineHelpText>
    <label>Treinamento</label>
    <type>Checkbox</type>
</CustomField>