force-app/main/default/objects/Campaign/recordTypes/Externo.recordType-meta.xml
<RecordType>
    <fullName>Externo</fullName>
    <active>true</active>
    <description>Criado para demandas externas, como congressos e workshops.</description>
    <label>Externo</label>
</RecordType>