force-app/main/default/objects/Campaign/recordTypes/Interno.recordType-meta.xml
<RecordType>
    <fullName>Interno</fullName>
    <active>true</active>
    <description>Eventos voltados para demandas internas, como treinamentos ou integrações com colaboradores.</description>
    <label>Interno</label>
</RecordType>