force-app/main/default/objects/Campaign/recordTypes/Interno_Hospcom.recordType-meta.xml
<RecordType>
    <fullName>Interno_Hospcom</fullName>
    <active>true</active>
    <description>Criado para eventos institucionais voltados a toda a empresa, como festas, campanhas e comemorações.</description>
    <label>Hospcom</label>
</RecordType>