force-app/main/default/objects/Campaign/recordTypes/Reuniao.recordType-meta.xml
<RecordType>
    <fullName>Reuniao</fullName>
    <active>true</active>
    <description>Destinados para reuniões de qualquer natureza.</description>
    <label>Reunião</label>
</RecordType>