force-app/main/default/objects/Campaign/validationRules/Bloqueio_Status_para_perfis.validationRule-meta.xml
<ValidationRule>
    <fullName>Bloqueio_Status_para_perfis</fullName>
    <active>true</active>
    <description>Bloqueia o campo status quando o usuario não faz parte do perfil ADM e Eventos</description>
    <errorConditionFormula>AND(
    ISCHANGED(Status),
    OR(
        RecordTypeId = &quot;0125A000001dweb&quot;,
        RecordTypeId = &quot;0125A000001dwebQAA&quot;
    ),
    $Profile.Id &lt;&gt; &quot;00e6e000002JQbg&quot;,
    $Profile.Id &lt;&gt; &quot;00ei0000000nKA9&quot;
)</errorConditionFormula>
    <errorMessage>Você não tem permissão para alterar o status desse evento.</errorMessage>
</ValidationRule>