force-app/main/default/objects/Campaign/validationRules/Confirmar_evento.validationRule-meta.xml
<ValidationRule>
    <fullName>Confirmar_evento</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(
TEXT(PRIORVALUE(Status)) = &apos;Rascunho&apos;,
TEXT(PRIORVALUE(Status)) = &apos;Planejado&apos;
),
TEXT(Status) == &apos;Em andamento&apos;,
TEXT(Status) != &apos;Concluído&apos;
)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Marque o status como &apos;Confirmado&apos; antes de colocar em andamento ou concluído</errorMessage>
</ValidationRule>