force-app/main/default/objects/Campaign/validationRules/Data_invalida.validationRule-meta.xml
<ValidationRule>
    <fullName>Data_invalida</fullName>
    <active>true</active>
    <errorConditionFormula>Termino__c &lt;  Inicio__c</errorConditionFormula>
    <errorMessage>O término não pode ser anterior ao início.</errorMessage>
</ValidationRule>