force-app/main/default/objects/Campaign/validationRules/endereco.validationRule-meta.xml
<ValidationRule>
    <fullName>endereco</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNEW(), 
!ENdere_o_check__c,  
RecordType.Id == &apos;0125A000001dwebQAA&apos;)</errorConditionFormula>
    <errorDisplayField>Endereco__PostalCode__s</errorDisplayField>
    <errorMessage>Coloque um endereço</errorMessage>
</ValidationRule>