force-app/main/default/objects/Campaign/validationRules/endereco_regra.validationRule-meta.xml
<ValidationRule>
    <fullName>endereco_regra</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    NOT(ISNEW()), 
    ISBLANK(Endereco__c)
)</errorConditionFormula>
    <errorDisplayField>Endereco__City__s</errorDisplayField>
    <errorMessage>Preencha o campo &apos;Endereço&apos; antes de salvar.</errorMessage>
</ValidationRule>