force-app/main/default/objects/Campaign/validationRules/meta_de_vendas.validationRule-meta.xml
<ValidationRule>
    <fullName>meta_de_vendas</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISBLANK(Meta_de_Vendas__c), 
    TEXT(Status) != &quot;Novo&quot;,
    TEXT(Status) != &quot;Rejeitado&quot;,
    RecordType.Name == &quot;Externo&quot;,  
    (TODAY() - DATEVALUE(CreatedDate)) &lt; 10 
)</errorConditionFormula>
    <errorDisplayField>Meta_de_Vendas__c</errorDisplayField>
    <errorMessage>Preencha o valor de metas de venda</errorMessage>
</ValidationRule>