force-app/main/default/objects/Campaign/validationRules/PrimeiroStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>PrimeiroStatus</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISNEW(),
TEXT(Status) != &apos;Rascunho&apos;
)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>O primeiro status deve ser &apos;Rascunho&apos;</errorMessage>
</ValidationRule>