force-app/main/default/objects/Campaign/validationRules/trava_atualizacao.validationRule-meta.xml
<ValidationRule>
    <fullName>trava_atualizacao</fullName>
    <active>false</active>
    <errorConditionFormula>ISNEW()</errorConditionFormula>
    <errorMessage>O sistema de eventos está em processo de atualização. A criação de novos eventos está suspensa até as 12h para que as melhorias sejam implementadas.</errorMessage>
</ValidationRule>