force-app/main/default/objects/Campaign/listViews/C_pia_de_Todos_os_eventosnovo.listView-meta.xml
<ListView>
    <fullName>C_pia_de_Todos_os_eventosnovo</fullName>
    <booleanFilter>1 AND 2 AND 3</booleanFilter>
    <columns>CAMPAIGN.NAME</columns>
    <columns>Data_de_in_cio2__c</columns>
    <columns>Data_de_t_rmino2__c</columns>
    <columns>CAMPAIGN.CREATED_DATE</columns>
    <columns>Marca__c</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.STATUS</field>
        <operation>notEqual</operation>
        <value>Cancelado</value>
    </filters>
    <filters>
        <field>CAMPAIGN.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Campaign.Externo,Campaign.Interno</value>
    </filters>
    <filters>
        <field>CAMPAIGN.CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>1/1/2024 12:00 AM</value>
    </filters>
    <label>Todos os eventos - Novo</label>
</ListView>