force-app/main/default/objects/Campaign/listViews/Eventos_dispon_veis_no_site.listView-meta.xml
<ListView>
    <fullName>Eventos_dispon_veis_no_site</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>Inicio__c</columns>
    <columns>Termino__c</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Dispon_vel_no_Site__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CAMPAIGN.STATUS</field>
        <operation>equals</operation>
        <value>Confirmado</value>
    </filters>
    <label>Eventos disponíveis no site</label>
</ListView>