force-app/main/default/objects/Campaign/listViews/Reunioes.listView-meta.xml
<ListView>
    <fullName>Reunioes</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>Inicio__c</columns>
    <columns>Termino__c</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Campaign.Reuniao</value>
    </filters>
    <label>Reuniões</label>
</ListView>