force-app/main/default/objects/Campaign/listViews/Treinamentos.listView-meta.xml
<ListView>
    <fullName>Treinamentos</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>Data_de_in_cio2__c</columns>
    <columns>Data_de_t_rmino2__c</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Campaign.Interno</value>
    </filters>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>contains</operation>
        <value>treina</value>
    </filters>
    <label>Treinamentos</label>
</ListView>